istio-deploy/flight-route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ta-flight-vs
  namespace: travel-agency-flight
spec:
  hosts:
  - "*"
  gateways:
    - ta-flight-gateway
  http:
    - match:
      - uri:
          exact: /flights
      route:
      - destination:
          host: ta-flight-svc
          port:
            number: 9001
          subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ta-flight-dr
  namespace: travel-agency-flight                                                                                                                                                              
spec:
  host: ta-flight-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:                                                                                                                                                               
      version: v2
